[gd_scene load_steps=4 format=1]

[ext_resource path="res://scripts/game_over.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/menu_font.fnt" type="Font" id=2]
[ext_resource path="res://scenes/enter_hiscore.tscn" type="PackedScene" id=3]


[node name="Node2D" type="Node2D"]

transform/pos = Vector2( 290.537, 424.222 )
script/script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]

margin/left = -134.0
margin/top = -25.0
margin/right = 171.0
margin/bottom = 22.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 2 )
text = "Game Over"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="WisdomLabel" type="Label" parent="."]

margin/left = -136.0
margin/top = 31.0
margin/right = 169.0
margin/bottom = 78.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 2 )
text = "Placeholder"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AgeLabel" type="Label" parent="."]

margin/left = -116.0
margin/top = 87.0
margin/right = 156.0
margin/bottom = 132.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
custom_fonts/font = ExtResource( 2 )
text = "Placeholder"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="continue" type="Button" parent="."]

margin/left = -75.0
margin/top = 162.0
margin/right = 133.0
margin/bottom = 213.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
text = "Continue..."
flat = false

[node name="enter_hiscore" parent="." instance=ExtResource( 3 )]

visibility/visible = false
margin/left = -283.0
margin/top = -496.0
margin/right = -254.0
margin/bottom = -439.0


